# polars-numba

./: README.md  example_chunking.py  example_parallelism.py  examples.py  examples2.py  examples_collect_fold.py  examples_collect_scan.py  examples_fold.py  examples_memory_usage.py  examples_memory_usage2.py  examples_scan.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/polars_numba/: __init__.py
tests/: test_collect_fold.py  test_collect_scan.py  test_expr_fold.py  test_expr_scan.py  test_fold.py  test_scan.py  utils.py
