[project]
name = "polars-numba"
version = "0.1"
description = "Numba-based APIs to extend Polars"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "G-Research OSS"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "polars",
    #"awkward",
    "numba",
    #"pyarrow",
    #"pandas", # not ideal, will need to be fixed upstream
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/g-research/polars-numba"
Changelog = "https://github.com/g-research/polars-numba/releases"
Issues = "https://github.com/g-research/polars-numba/issues"
CI = "https://github.com/g-research/polars-numba/actions"


[project.optional-dependencies]
test = ["pytest", "numpy"]
